--- a/Hire_me_v2/HireMe/Pages-Graduates/CSS/Style1-Gradute.css
+++ b/Hire_me_v2/HireMe/Pages-Graduates/CSS/Style1-Gradute.css
@@ -148,7 +148,7 @@ a:hover, a:active {
     font-size: 25px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #193783;
-    direction: ltr;
+    direction: rtl;
     border: none;
     background: none;
     border-bottom: 3px solid #2d2e2e;
